modified:   Bc2Ride.xcodeproj/project.xcworkspace/xcuserdata/will.xcuserdatad/UserInterfaceState.xcuserstate modified:   Bc2Ride/Base.lproj/Main.storyboard modified:   Bc2Ride/EIViewController.swift modified:   Bc2Ride/FEViewController.swift 	modified:   Bc2Ride/GRViewController.swift 	modified:   Bc2Ride/SCViewController.swift 	modified:   Bc2Ride/SEViewController.swift

--- a/Bc2Ride/Base.lproj/Main.storyboard
+++ b/Bc2Ride/Base.lproj/Main.storyboard
@@ -257,7 +257,7 @@
                                     <outlet property="delegate" destination="nTJ-vt-1Nl" id="eJh-2w-eo6"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" tag="2" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZuT-kL-pwO">
+                            <button opaque="NO" tag="4" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZuT-kL-pwO">
                                 <rect key="frame" x="301" y="533" width="250" height="48"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="30"/>
                                 <state key="normal" title="home"/>
@@ -267,7 +267,7 @@
                                     <segue destination="BYZ-38-t0r" kind="show" id="Aws-qW-CzL"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gb0-EV-x9k">
+                            <button opaque="NO" tag="3" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gb0-EV-x9k">
                                 <rect key="frame" x="49" y="533" width="250" height="48"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="30"/>
                                 <state key="normal" title="cancle"/>
@@ -296,14 +296,14 @@
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="30"/>
                                 <state key="normal" title="need more ride"/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="udw-Zi-buB">
+                            <button opaque="NO" tag="6" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="udw-Zi-buB">
                                 <rect key="frame" x="491" y="20" width="60" height="46"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
                                     <segue destination="oqM-5a-tpZ" kind="show" id="bVG-nN-w68"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rQw-32-dWL">
+                            <button opaque="NO" tag="5" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rQw-32-dWL">
                                 <rect key="frame" x="49" y="20" width="60" height="46"/>
                                 <state key="normal" title="Button"/>
                             </button>
